# scrapy_homework

./: README.md  pyproject.toml
wiki_parser/wiki_parser/: items.py  settings.py
wiki_parser/wiki_parser/spiders/: movie.py
