[tool.poetry]
name = "scrapy-homework"
version = "0.1.0"
description = ""
authors = ["pablo <pavelmolodcov111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
